<resources>
    <string name="app_name">Bharati News</string>
    <string name="sign_in">साइन इन</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="mukhya">मुख्य खबरें</string>
    <string name="desh">देशं</string>
    <string name="khel">खेल</string>
    <string name="dharm">धर्म</string>
    <string name="dilchasp">दिलचस्प</string>
    <string name="swasthay">स्वास्थय</string>
    <string name="paryatan">पर्यटन</string>
    <string name="itihas">इतिहासं</string>
    <string name="gadget">गैजेट</string>
    <string name="auto">ऑटो</string>
    <string name="karobar">कारोबार</string>
    <string name="sheherorrajya">शहर और राज्य</string>
    <string name="settings">सेटिंग्स</string>
    <string name="feedback">फीडबैक</string>
    <string name="logo">logo</string>
    <string name="notifcenter">नोटिफिकेशन सेंटर</string>
    <string name="bookmark">बुकमार्क सेंटर</string>
    <string name="bookmarktext">आपकी बुकमार्क पोस्ट आपको यहाँ दिखेंगी। बुकमार्क देखने के लिए कृपया लॉग इन करें। </string>

    <string name="notiftext">आपके कमैंट्स पर आने वाले रिप्लाई के नोटिफिकेशन्स आपको यहाँ दिखेंगे।  नोटिफिकेशन्स देखने के लिए कृपया लॉग इन करे। </string>
    <string name="khabrein">अपनी पसंद चुनें, पाएं वो खबरें जो आपको है पसंद </string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="star">Star</string>
    <string name="setting">setting</string>
    <string name="notification">notification</string>
    <string name="icon">icon</string>
    <string name="padhna">पढ़ना शुरू करें >></string>
    <string name="vishay">विषय</string>
    <string name="apkeliye">आपके लिए</string>
    <string name="lokpriy">लोकप्रिय</string>
    <string name="sthaniy">स्थानीय खबरें</string>
    <string name="video">वीडियो</string>
    <string name="badi">बड़ी खबर</string>
    <string name="modi">मोदी 2.0</string>
    <string name="duniya">दुनिया</string>
    <string name="daily">डेली शेयर</string>
    <string name="manoranjan">मनोरंजन</string>
    <string name="naukri">नौकरी</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="plus_sign">Plus Sign</string>
</resources>